--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Dimitris Karakaxas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
